--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 </head>
 
 <body>
-    
-<p><h1>打火機與公主裙</h1></p>
-<h2>作者:Twentine</h2>
+ <header>
+     <h1><em>打火機與公主裙</em></h1>
+     <h2>作者:Twentine</h2>
+   
+    </header>   <hr>
+   <article>
+       <section>
+           作品簡章:</br>
 
-
-
-<p>
-<strong>
-    作品簡章:
-</br>
-我有我的國王，我是他的不二臣， 我願為他搖旗吶喊，也願為他戰死沙場。
-</strong>
-
-
+他是走在荊棘路上孤高又狂妄的王，卻戲稱她為公主。</br>
+可是她不是公主，她只是想和她的王一起開疆闢土。
+       </section>
+   </article> 
+<img src=""
+<nav>
 <ul>
-  <li>technologists</li>
-  <li>thinkers</li>
-  <li>builders</li>
-</ul>
+<li><a href=https://www.baozimh.com/comic/dahuojiyugongzhuqun-youkudongman>打火機與公主裙漫畫</sa></li>
+<li><a href="https://www.banxia.co/75_75851/">打火機與公主裙小說</a></li>
+<li><a href="https://www.ximalaya.com/album/36820974">打火機與公主裙廣播劇</a></li>
+</br>
+<input type="search" name="q" placeholder="Search query">
+ <input type="submit" value="Go!">
 
-<p>working together ... </p>
 
-    <p>My cat is <strong>very</strong> grumpy.</p>
 
-<img src="images/firefox-icon.png"
-alt="my test image">
+
 
 
     
